--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@types/node": "^14.14.19",
     "binaryen": "^98.0.0",
+    "lezer": "^0.13.1",
+    "lezer-python": "^0.13.1",
     "ts-loader": "^8.0.13",
     "typescript": "^4.1.3",
     "wabt": "^1.0.20",
