--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "lib": ["es2019", "dom"]
   }
 }
